--- a/source/en/index.md.erb
+++ b/source/en/index.md.erb
@@ -1,5 +1,5 @@
 ---
-title: GoPay REST API
+title: GoPay PSD2 API
 locale: en
 toc_footers:
   - <a href='http://www.gopay.com'>GoPay website</a>
@@ -12,12 +12,12 @@ search: true
 
 <%= partial "includes/languages" %>    
 
-GoPay REST API is avaliable in test mode at ```https://gw.sandbox.gopay.com/api```.    
+<b>GoPay PSD2 API</b>
 
-Production enviroment is located at ```https://gate.gopay.cz/api```. 
+The implementation uses communication via REST API.
+
+`Sandbox` enviroment is located at ```https://gw.sandbox.gopay.com/api```.    
+
+`Production enviroment` is located at ```https://gate.gopay.cz/api```. 
   
 All comunication with API is encoded in UTF-8.  
-  
-You can find integration details in our [help center](https://help.gopay.com/en/s/uY).
-
-For the test purposes you can use [making test paymets guide](https://help.gopay.com/en/s/wk) (includes e.g. test payments cards).
