--- a/source/includes/en/psd2-api.md.erb
+++ b/source/includes/en/psd2-api.md.erb
@@ -4,8 +4,8 @@ The GoPay PSD2 services offer to the Third Party Providers (`TPP`) read the info
 
 GoPay PSD2 API offers 2 basic types of services:
 
-- [AIS](#ais) (Account information service)
-- [PIS](#pis) (Payment initiation service)
+- [Account information service](#account-information-service) (AIS)
+- [Payment initiation service](#paymen-tinitiation-service) (PIS)
 
 ## AIS
 
