--- a/source/en/index.md.erb
+++ b/source/en/index.md.erb
@@ -4,7 +4,7 @@ locale: en
 toc_footers:
   - <a href='http://www.gopay.com'>GoPay website</a>
   - <a href='http://help.gopay.com/en'>Help center</a>
-  - <a href="https://doc.gopay.cz"><img src = "../images/CSsmall.png"></a> <a href="https://doc.gopay.com"><img src = "../images/ENsmall.png"></a>
+  - <a href="https://doc.gopay.com/psd2/cs/"><img src = "../images/CSsmall.png"></a> <a href="https://doc.gopay.com/psd2/en/"><img src = "../images/ENsmall.png"></a>
 search: true
 ---
 
