--- a/source/includes/cs/psd2-api.md.erb
+++ b/source/includes/cs/psd2-api.md.erb
@@ -41,10 +41,10 @@ Název parametru|Popis parametru|
 id| ID účtu
 email| E-mailový kontakt účtu
 name| Jméno majitele účtu
-[state](#stav-uctu)| Stav účtu, nabývá hodnost, viz [state](#stav-uctu)
+[state](#state)| Stav účtu, nabývá hodnot, viz [state](#state)
 go_id| Identifikátor účtu GoID
 phone_number| Telefonní kontakt účtu
-verification_level| Úroveň ověření účtu
+[verification_level](#verification-level)| Úroveň ověření účtu
 [accounts](#accounts)| Připojené účty elektronických peněz
 
 
