--- a/source/includes/cs/psd2-api.md.erb
+++ b/source/includes/cs/psd2-api.md.erb
@@ -81,8 +81,8 @@ Authorization|Bearer [```<access-token>```](#pristupovy-token)|ANO
 Název parametru|Popis parametru|
 ---------------|---------------|
 evidence_number| Evidenční číslo (EVČ)
-[current_state](#)| Stav účtu
-[subject_type](#)| Právní forma
+[current_state](#current-state)| Stav účtu
+[subject_type](#subject-type)| Právní forma
 name| Název
 first_name| Křestní jméno
 registration_number| IČO
