--- a/source/includes/en/psd2-api.md.erb
+++ b/source/includes/en/psd2-api.md.erb
@@ -69,8 +69,8 @@ Authorization|Bearer [```<access-token>```](#access-token)|YES
 Název parametru|Popis parametru|
 ---------------|---------------|
 evidence_number| Evidence number (EVC)
-[current_state](#)| Account state
-[subject_type](#)| Subject type
+[current_state](#current-state)| Account state
+[subject_type](#subject-type)| Subject type
 name| Name
 first_name| First name
 registration_number| Registration number
