--- a/source/includes/en/preauthorized-capture.md.erb
+++ b/source/includes/en/preauthorized-capture.md.erb
@@ -14,7 +14,7 @@ Additional information about pre-authorized payments you can find in [help cente
 
 <h5>Header of request</h5>
 
-Parameter's name|Parameter's description| Required
+Parameter name|Description| Required
 ----------------|-----------------|--------
 Accept|application/json|YES
 Content-Type|application/x-www-form-urlencoded|YES
@@ -26,7 +26,7 @@ Authorization|Bearer [```<access-token>```](#access-token)|YES
 
 <h5>Response</h5>
 
-Parameter's name|Parameter's description| Data's type
+Parameter name|Description| Type
 ---------------|---------------|----------
 id|payment ID|long
 [result](#result)|Object describing the request status| Object
