--- a/source/includes/en/preauthorized-void.md.erb
+++ b/source/includes/en/preauthorized-void.md.erb
@@ -13,7 +13,7 @@ More information about pre-authorized payments you can find in [help center](htt
 
 <h5>Header of request</h5>
 
-Parameter's name|Parameter's description| Required
+Parameter name|Description| Required
 ----------------|-----------------|--------
 Accept|application/json|YES
 Content-Type|application/x-www-form-urlencoded|YES
@@ -25,7 +25,7 @@ Authorization|Bearer [```<access-token>```](#access-token)|YES
 
 <h5>Response</h5>
 
-Parameter's name|Parameter's description| Data's type
+Parameter name|Description| Type
 ---------------|---------------|----------
 id|payment ID|long
 [result](#result)|Object describing of request status|long
