--- a/source/includes/en/statement.md.erb
+++ b/source/includes/en/statement.md.erb
@@ -18,7 +18,7 @@ More information about file types specification you can find in [help center](ht
 
 <h5>Header of request</h5>
 
-Parameter's name|Parameter's description|Required
+Parameter name|Description|Required
 ---------------|---------------|-------
 Accept|application/json|YES
 Content-Type|application/json|YES
@@ -26,7 +26,7 @@ Authorization|Bearer [```<access-token>```](#access-token)|YES
 
 <h5>Body of request</h5>
 
-Parameter's name|Parameter's description|Required|Data's type
+Parameter name|Description|Required|Type
 ----------------|-----------------|---------|-----------
 date_from|Statement start date|YES| string yyyy-mm-dd
 date_to|Statement end date|YES| string yyyy-mm-dd
