--- a/source/includes/en/status.md.erb
+++ b/source/includes/en/status.md.erb
@@ -22,7 +22,7 @@ For the [identification payment](#identification-payment) functionality the resp
 
 <h5>Header of request</h5>
 
-Parameter's name|Parameter's description| Required
+Parameter name|Description| Required
 ----------------|-----------------|--------
 Accept|application/json|YES
 Content-Type|application/x-www-form-urlencoded|YES
@@ -34,7 +34,7 @@ Authorization|Bearer [```<access-token>```](#access-token)|YES
 
 <h5>Response</h5>
 
-Parameter's name|Parameter's description|Data's type
+Parameter name|Description|Type
 ---------------|---------------|-----------
 id|Payment ID|long
 order_number|Order identification within the point of sale|string, alphanumeric characters only (128 characters)
