--- a/source/includes/en/payment-method-list.md.erb
+++ b/source/includes/en/payment-method-list.md.erb
@@ -21,7 +21,7 @@ GoID of eshop and code of currency must be passed in URL.
 
 <h5>HEADER OF THE REQUEST</h5>
 
-Parameter's name|Parameter's description|Required
+Parameter name|Description|Required
 --------------|---------------------|--------
 Accept|application/json|ANO
 Authorization| Bearer [```<access-token>```](#access-token)|YES
@@ -32,7 +32,7 @@ Authorization| Bearer [```<access-token>```](#access-token)|YES
 
 <h5>Response</h5>
 
-Parameter's name|Parameter's description
+Parameter name|Description
 ---------------|---------------
 [groups](#groups)| Definition of payment method groups
 [enabledPaymentInstruments](#enabledpaymentinstruments)| Object that contains payment methods that are avaliable on eshop profile
