--- a/source/includes/en/psd2-api.md.erb
+++ b/source/includes/en/psd2-api.md.erb
@@ -16,7 +16,7 @@ For creating of the access-token, you need to use a token created in scope of ac
 
 <h5>Header of request</h5>
 
-Parameter's name | Parameter's description | Required
+Parameter name | Description | Required
 ---------------|---------------|-------
 Accept|application/json|YES
 Authorization|Bearer [```<access-token>```](#access-token)|YES
@@ -27,7 +27,7 @@ Authorization|Bearer [```<access-token>```](#access-token)|YES
 
 <h5>Response</h5>
 
-Parameter's name | Parameter's description
+Parameter name | Description
 ---------------|---------------|
 id| ID of account
 email| E-mail contact
@@ -55,7 +55,7 @@ For creating of the access-token, you need to use a token created in scope of ac
 
 <h5>Header of request</h5>
 
-Parameter's name | Parameter's description | Required
+Parameter name | Description | Required
 ---------------|---------------|-------
 Accept|application/json|YES
 Authorization|Bearer [```<access-token>```](#access-token)|YES
@@ -101,7 +101,7 @@ For creating of the access-token, you need to use a token created in scope of ac
 
 <h5>Header of request</h5>
 
-Parameter's name | Parameter's description | Required
+Parameter name | Description | Required
 ---------------|---------------|-------
 Accept|application/json|YES
 Authorization|Bearer [```<access-token>```](#access-token)|YES
@@ -112,7 +112,7 @@ Authorization|Bearer [```<access-token>```](#access-token)|YES
 
 <h5>Response</h5>
 
-Parameter's name | Parameter's description
+Parameter name | Description
 ---------------|---------------|
 id| ID of movement
 amount|Amount in cents|YES| long > 0
@@ -143,7 +143,7 @@ For creating of the access-token, you need to use a token created in scope of pa
 
 <h5>Header of request</h5>
 
-Parameter's name | Parameter's description | Required
+Parameter name | Description | Required
 ---------------|---------------|-------
 Accept|application/json|YES
 Content-Type|application/json|YES
@@ -151,7 +151,7 @@ Authorization|Bearer [```<access-token>```](#access-token)|YES
 
 <h5>Body of request</h5>
 
-Parameter's name | Parameter's description | Required
+Parameter name | Description | Required
 ---------------|---------------|-------
 payer| Object describing the payer of the payment|YES
 [target](#target)|Object describing the target of the payment (payee)|YES
@@ -164,7 +164,7 @@ amount|Amount in cents|YES
 
 <h5>Response</h5>
 
-Parameter's name | Parameter's description |
+Parameter name | Description |
 ---------------|---------------|
 id|ID of payment
 [state](#payment-status)|Payment status
@@ -197,7 +197,7 @@ For creating of the access-token, you need to use a token created in scope of pa
 
 <h5>Header of request</h5>
 
-Parameter's name | Parameter's description | Required
+Parameter name | Description | Required
 ---------------|---------------|-------
 Accept|application/json|YES
 Content-Type|application/x-www-form-urlencoded|YES
@@ -209,7 +209,7 @@ Authorization|Bearer [```<access-token>```](#access-token)|YES
 
 <h5>Response</h5>
 
-Parameter's name | Parameter's description |
+Parameter name | Description |
 ---------------|---------------|
 id|ID of payment
 [state](#payment-status)|Payment status
