--- a/source/includes/en/recurrence-void.md.erb
+++ b/source/includes/en/recurrence-void.md.erb
@@ -15,7 +15,7 @@ More information about recurring payments you can find in [help center](https://
 
 <h5>Header of request</h5>
 
-Parameter's name|Parameter's description| Required|
+Parameter name|Description| Required|
 ----------------|-----------------|--------
 Accept|application/json|YES
 Content-Type|application/x-www-form-urlencoded|YES
@@ -27,7 +27,7 @@ Authorization|Bearer [```<access-token>```](#access-token)|YES
 
 <h5>Response</h5>
 
-Parameter's name|Parameter's description| Data's type
+Parameter name|Description| Type
 ---------------|---------------|-------
 id|Payment ID |long
 [result](#result)|Object describing the request status| Object
