--- a/source/includes/en/refund-eet.md.erb
+++ b/source/includes/en/refund-eet.md.erb
@@ -12,7 +12,7 @@ Refundation of the EET payment back to the customer.
 
 <h5>Header of request</h5>
 
-Parameter's name|Parameter's description| Required
+Parameter name|Description| Required
 ----------------|-----------------|--------
 Accept|application/json|YES
 Content-Type|application/json|YES
@@ -20,7 +20,7 @@ Authorization|Bearer [```<access-token>```](#access-token)|YES
 
 <h5>Body of request</h5>
 
-Parameter's name|Parameter's description| Required| Data's type
+Parameter name|Description| Required| Type
 ---------------|---------------|-------|-------
 amount|Refunded amount in cents|YES|long > 0
 [items](#items)|Itemized in detail each item of the order|YES| Object
@@ -32,7 +32,7 @@ amount|Refunded amount in cents|YES|long > 0
 
 <h5>Response</h5>
 
-Parameter's name|Parameter's description| Data's type
+Parameter name|Description| Type
 ---------------|---------------|-------
 id|Payment ID|long
 [result](#result)|Status of request| Object
