--- a/source/includes/en/refund.md.erb
+++ b/source/includes/en/refund.md.erb
@@ -17,7 +17,7 @@ You can find additional information about refundations in [help center](https://
 
 <h5>Header of request</h5>
 
-Parameter's name|Parameter's description| Required
+Parameter name|Description| Required
 ----------------|-----------------|--------
 Accept|application/json|YES
 Content-Type|application/x-www-form-urlencoded|YES
@@ -25,7 +25,7 @@ Authorization|Bearer [```<access-token>```](#access-token)|YES
 
 <h5>Body of request</h5>
 
-Parameter's name|Parameter's description| Required| Data's type
+Parameter name|Description| Required| Type
 ---------------|---------------|-------|-------
 amount|Refunded amount in cents|YES|long > 0
 
@@ -35,7 +35,7 @@ amount|Refunded amount in cents|YES|long > 0
 
 <h5>Response</h5>
 
-Parameter's name|Parameter's description| Data's type
+Parameter name|Description| Type
 ---------------|---------------|-------
 id|Payment ID|long
 [result](#result)|Status of request| Object
