--- a/source/includes/en/verification-payment.md.erb
+++ b/source/includes/en/verification-payment.md.erb
@@ -25,7 +25,7 @@ When the payment is created as pre-authorized you need to make [charge](#charge-
 
 <h5>Header of request</h5>
 
-Parameter's name | Parameter's description | Required
+Parameter name | Description | Required
 ----------------|-----------------|--------
 Accept|application/json|YES
 Content-Type|application/json|YES
@@ -33,7 +33,7 @@ Authorization|Bearer [```<access-token>```](#access-token)|YES
 
 <h5>Body of request</h5>
 
-Parameter's name | Parameter's description | Required | Data's type
+Parameter name | Description | Required | Type
 ----------------|-----------------|---------|--------
 [payer](#payer)|Object describing the payer of the payment|YES| Object
 [target](#target)|Object describing the target of the payment (payee)|YES| Object
@@ -52,7 +52,7 @@ preauthorization|Activation of pre-authorized payment|YES| bool
 
 <h5>Response</h5>
   
-Parameter's name|Parameter's description|Data's type
+Parameter name|Description|Type
 ---------------|---------------|-------
 id|Payment ID|long
 order_number| order ID| string, alphanumeric characters only (128 characters)
@@ -80,7 +80,7 @@ The request for creation of the next identification payment is based on standard
 
 <h5>Header of request</h5>
 
-Parameter's name | Parameter's description | Required
+Parameter name | Description | Required
 ----------------|-----------------|--------
 Accept|application/json|YES
 Content-Type|application/json|YES
@@ -88,7 +88,7 @@ Authorization| Bearer [```<access-token>```](#access-token)|YES
 
 <h5>Body of request</h5>
 
-Parameter's name| Parameter's description | Required | Data's type
+Parameter name| Description | Required | Type
 ----------------|-----------------|---------|-----------
 [payer](#payer)|The object describing the payer of the payment|YES| Object
 [target](#target)|The object describing the target of the payment (payee)|YES| Object
@@ -107,7 +107,7 @@ order_description|Description of goods / service|NO|string, alphanumeric charact
                 
 <h5>Response</h5> 
   
-Parameter's name|Parameter's description| Data's type
+Parameter name|Description| Type
 ---------------|---------------|-----------
 id|Payment ID|long
 order_number|Identification of order| string, alphanumeric characters only (128 characters)
